--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "cryptography==46.0.3",
+    "dotenv==0.9.9",
     "openpyxl==3.1.5",
     "pandas==2.3.2",
     "rich>=14.2.0",
