--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "dotenv==0.9.9",
     "openpyxl==3.1.5",
     "pandas==2.3.2",
+    "requests>=2.32.5",
     "rich>=14.2.0",
 ]
