--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "openpyxl==3.1.5",
     "pandas==2.3.2",
     "requests>=2.32.5",
+    "response>=0.5.0",
     "rich>=14.2.0",
 ]
